--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
     ],
     "license": "MIT",
     "require": {
+        "ext-json": "*",
+        "ext-curl": "*",
+        "ext-mysqli": "*",
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
@@ -34,7 +37,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Lottery\\": "utilities/"
         },
         "classmap": [
             "database/seeds",
